--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
         alert("SIGN UP FIRST") //steps is displayed
     </script>
     <button type="button" id="c" onclick="add()">SignUp</button>
-     <!-- <a href="login1.html"><button type="button" id="d">Login</button></a>  -->
+      <a href="login1.html"><button type="button" id="d">Login</button></a>  
    
    <script>
 
