--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
 
 async function getuser(){
     try{
-    const res=await fetch('http://localhost:3000/get-user')
+    const res=await fetch('https://users-backend-0ljr.onrender.com/get-user')
     const data=await res.json();
     console.log(data)
 }
@@ -36,7 +36,7 @@ async function add(){
     try{
         const emailId=document.getElementById('a').value
         const password=document.getElementById('b').value
-        const res=await fetch('http://localhost:3000/add-user',{
+        const res=await fetch('https://users-backend-0ljr.onrender.com/add-user',{
             method:"POST",
             headers:{
                 'content-type':'application/json'
