--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,8 +7,8 @@
 
 </head>
 <body>
-    Email Id:<input type="email" id="a"><br><br>
-    Password:<input type="password" id="b"><br><br>
+    Email Id:<input type="email" id="a" placeholder="enter any name"><br><br>
+    Password:<input type="password" id="b" placeholder="enter any name"><br><br>
     <script>
         alert("SIGN UP FIRST") //steps is displayed
     </script>
